k8s/heimdall/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: heimdall 
spec:
  replicas: 1
  serviceName: heimdall
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      name: heimdall
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: lscr.io/linuxserver/heimdall:v2.6.3-ls312
        imagePullPolicy: Always
        ports:
          - name: heimdall
            containerPort: 80 
        volumeMounts:
        - mountPath: "/config"
          name: heimdall-config
      volumes:
      - name: heimdall-config
        iscsi:
          targetPortal: 10.10.11.6:3260
          iqn: iqn.2024-10.ca.faircloth.nas:heimdall-config
          fsType: ext4
          readOnly: false
